# skyeye

./: .gitignore  CLAUDE.md  README.md  cli.py  db.py  main.py  pyproject.toml  search.py  skyeye.db  video_processor.py
api/: search.py  videos.py
docs/: design.md  requirement.md
docs/plans/: 2026-04-21-project-init-design.md
docs/research/: bytetrack-integration.md  clothing-attribute-improvement.md  comprehensive-improvement-plan.md  yolo-detection-improvement.md
docs/superpowers/plans/: 2026-04-25-bytetrack-minimal-backend-retrofit.md  2026-04-25-result-card-preview-modal.md  2026-05-05-skyeye-v2-person-centric.md
docs/superpowers/specs/: 2026-04-25-bytetrack-minimal-backend-design.md  2026-04-25-result-card-preview-modal-design.md  2026-05-05-skyeye-v2-person-centric-design.md
services/: __init__.py  search_service.py  video_service.py
skyeye/: cli.py  db.py  main.py  paths.py  search.py  video_processor.py
skyeye/api/: __init__.py  persons.py  search.py  videos.py
skyeye/pipeline/: __init__.py  cropper.py  representative.py
skyeye/repositories/: __init__.py  person_repository.py
skyeye/services/: image_service.py  search_service.py  video_service.py
skyeye/storage/: __init__.py  local_store.py  object_store.py
skyeye/templates/: index.html
tests/: test_db_paths.py  test_image_service.py  test_object_store.py  test_person_api.py  test_person_pipeline.py  test_person_repository.py  test_search_service.py  test_video_service.py
web/: .env.example  README.md  index.html  package.json
web/src/: App.tsx  index.css  types.ts
(+10 files in other folders)
