[project]
name = "recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "opencv-python>=4.13.0.92",
    "ultralytics>=8.4.24",
    "requests>=2.32.5",
    "fastapi[standard]>=0.136.0",
    "transformers>=5.5.4",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
